# cpp-archetype

./: .clang-format  .gitignore  CMakeLists.txt
include/: my_singleton.h  singleton.h  work.h
include/3rd/: constant.h
include/sub/: sub.h  xx.hpp
src/: main.cpp  my_singleton.cpp  work.cpp
